# Fangjia_Qt6_Cpp

./: .clang-format  .clang-tidy  .gitignore  BUILD_WINDOWS.md  BUTTON_FOCUS_DEMO.md  BUTTON_RENDER_FIX_SUMMARY.md  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.backup  CMakePresets.json  CMakeSettings.json  COMPILATION_FIXES_GUIDE.md  DECLARATIVE_TOPBAR_ANIMATION_IMPLEMENTATION.md  DECLARATIVE_TOPBAR_ANIMATION_IMPLEMENTATION.zh-CN.md  FIX_SUMMARY.md  FOCUS_SYSTEM_IMPLEMENTATION.md  FOLLOW_SYSTEM_ACCESS_VIOLATION_FIX.md  FOLLOW_SYSTEM_ANIMATION_FIX.md  IMPLEMENTATION_VALIDATION.md  IconLoader.cpp  IconLoader.h  MANUAL_VERIFICATION.md  MainOpenGlWindow.cpp  MainOpenGlWindow.h  NEW_POPUP_GUIDE.md  NVIDIA_OPENGL_FIX_SUMMARY.md  NavViewModel.cpp  NavViewModel.h  PHASE2_SUMMARY.md  POPUP_FIX_README.md  POPUP_IMPLEMENTATION.md  POPUP_INTEGRATION_GUIDE.cpp  POPUP_MIGRATION_GUIDE.md  POPUP_REFACTORING_COMPARISON.md  POPUP_REFACTOR_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  RENDERING_PIPELINE_REFACTOR.md  RenderData.hpp  Renderer.cpp  (+78 more)
.github/: PULL_REQUEST_TEMPLATE.md  README.md  status-badges.md
.github/workflows/: ai-pr-validation.yml  auto-fix.yml  ci.yml  comprehensive-ci.yml
apps/fangjia/: CompositionRoot.cpp  CompositionRoot.h  CompositionRoot.ixx  CurrentPageHost.cpp  CurrentPageHost.h  DependencyMigrationTool.cpp  DependencyMigrationTool.h  DependencyMigrationTool.ixx  DependencyProvider.cpp  DependencyProvider.h  MainOpenGlWindow.cpp  MainOpenGlWindow.h  UnifiedDIUsageExample.h  UnifiedDependencyProvider.cpp  UnifiedDependencyProvider.h  UnifiedDependencyProvider.ixx  main.cpp
components/base/: UiContent.hpp
components/containers/: UiBoxLayout.cpp  UiBoxLayout.h  UiRoot.h
components/widgets/: UiTabView.h  UiTopBar.cpp  UiTreeList.h
data/repositories/: FormulaRepository.cpp  FormulaRepository.h  SettingsRepository.cpp  SettingsRepository.h  SqlCategoryRepository.cpp  SqlCategoryRepository.h  SqlDrugRepository.cpp  SqlDrugRepository.h  SqlFormulationRepository.cpp  SqlFormulationRepository.h
data/utils/: DatabasePopulator.cpp  DatabasePopulator.h
doc/: DESIGN.zh-CN.md  index.md  shadow_decorator.md
doc.zh-cn/: README.md  index.md
doc.zh-cn/application/: app-shell.md
doc.zh-cn/architecture/: architecture-analysis.md  cpp20-modules.md  dependency-injection.md  overview.md  system-integration.md  unified-dependency-injection.md  window-base-class.md
doc.zh-cn/data/: overview.md
doc.zh-cn/design/: README.md  ui-framework-implementation-guide.md  ui-framework-migration-guide.md  ui-framework-redesign.md
doc.zh-cn/domain/: design.md
doc.zh-cn/infrastructure/: gfx.md  platform-windows.md
doc.zh-cn/platform/: windows.md
doc.zh-cn/presentation/: architecture.md  binding.md
doc.zh-cn/ui/: declarative-popup.md  popup-control.md
doc/application/: app-shell.md
doc/architecture/: dependency-injection.md  (+3 more)
docs/: ARCHITECTURE.zh-CN.md  BINDING.md  BINDING_IMPLEMENTATION.md  Binding.zh-CN.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  DECLARATIVE_NAV_TOPBAR.md  DECLARATIVE_NAV_TOPBAR.zh-CN.md  DECLARATIVE_OVERVIEW.zh-CN.md  DESIGN.zh-CN.md  DEVELOPMENT.md  GLOSSARY.zh-CN.md  LAYOUTS.zh-CN.md  README.zh-CN.md  SCROLL_VIEW.zh-CN.md  UI_ARCHITECTURE.zh-CN.md  VIEWMODEL_GUIDE.md  comment-style-guide.zh-CN.md  formula-mvvm-implementation.md  github-actions-usage.md  presentation-binding.md  开发指南.md  渲染与UI体系.md  版本与发布.md  编码规范.md  设计架构.md  贡献指南.md  配置与主题.md  项目结构说明.md
domain/: ServiceRegistry.cpp  ServiceRegistry.h
examples/: CMakeLists.txt  button_api_test.cpp  button_demo.cpp  declarative_nav_topbar_example.cpp  declarative_popup_example.cpp  grid_alignment_test.cpp  popup_integration_example.cpp
examples/mvvm_binding/: CMakeLists.txt  main.cpp
presentation/: FangjiaApp.cpp  FangjiaApp.hpp  MainOpenGlWindow.cpp  MainOpenGlWindow.hpp
resources/: resources.qrc
scripts/: README.md  generate_vs_solution.bat  generate_vs_solution.ps1  validate-ci.sh
src/: main.cpp
src/core/: CMakeLists.txt
src/core/base/: BaseComponent.cpp  BaseComponent.h
src/core/config/: AppConfig.cpp  AppConfig.h
src/core/di/: ServiceLocator.h  ServiceRegistry.cpp  ServiceRegistry.h  SimpleDependencyContainer.cpp  SimpleDependencyContainer.h
src/core/interfaces/: IComponent.h  IDependencyContainer.h
src/core/platform/windows/: WinWindowChrome.cpp  WinWindowChrome.h
src/core/rendering/: IconCache.cpp  IconCache.h  IconLoader.cpp  IconLoader.h  RenderData.hpp  Renderer.cpp  Renderer.h
src/core/vm/: ViewModelBase.cpp
src/infrastructure/: CMakeLists.txt  stub.cpp
tests/: CMakeLists.txt  TestAppConfig.cpp  TestDependencyInjection.cpp  TestFormulaContent.cpp  TestFormulaServiceIntegration.cpp  TestFormulaViewModel.cpp  TestRebuildHost.cpp  TestTabViewModel.cpp  TestThemeManager.cpp  TestUnifiedDependencyInjection.cpp  comprehensive_viewport_test.cpp  core_tests.cpp  demo_appshell_resize_fix.cpp  manual_follow_system_test.cpp  popup_demo.cpp  simple_popup_demo.cpp  simple_viewport_test.cpp  test_declarative_viewport_fix.cpp  test_decorated_box.cpp  test_follow_system_animation  test_follow_system_animation.cpp  test_follow_system_animation_complete.cpp  test_main.cpp  test_nav_topbar_widgets.cpp  test_page_router.cpp  test_topbar_component_setup.cpp  test_ui_root_viewport_ordering.cpp  test_uigrid_alignment.cpp  test_uigrid_shrink_reversion.cpp  test_uipage_layout_contract.cpp  test_win_window_chrome.cpp  validate_rebuild_host_fix.cpp
tests/core/: test_app_config.cpp  test_renderer.cpp  test_service_locator.cpp  test_service_locator.h
tests/domain/: FakeSettingsRepository.h  test_usecases.cpp
tests/framework/: test_animations.cpp  test_binding_host.cpp  test_box_layout.cpp  test_icon_themepaths.cpp  test_page_router.cpp  test_ui_components.cpp  test_ui_page_wheel.cpp  test_ui_scroll_view.cpp  test_wheel_forwarding.cpp  test_wheel_logic.cpp  test_wrapper_wheel_forwarding.cpp
tests/integration/: test_integration.cpp
tests/models/: test_data_viewmodel.cpp  test_formula_viewmodel.cpp  test_nav_viewmodel.cpp  test_tab_viewmodel.cpp
views/: UiFormulaDetail.cpp
(+290 files in other folders)
